tagbox: fixed overflow handling in ie

--- a/less/tagbox.less
+++ b/less/tagbox.less
@@ -24,6 +24,7 @@
   box-shadow: 1px 2px 1px -1px rgba(0, 0, 0, 0.13);
   background-color: white;
   margin: 2px;
+  overflow: hidden;
 
   display: flex;
   align-items: center;
